Check if user is human with a checkbox
To be able to filter, the user has to check the “I’m not a robot” checkbox, otherwise it will appear a message asking to do it. Once the user clicks the checkbox, the message is removed.

The new function checkHuman() manages the three different cases after the user clicks the filter button:
1. If it’s checked, continue filtering.
2. If it’s not checked, show message.
3. If it’s still not checked and there’s already a message, stop filtering.

The reset button now clears the checkbox as well.

Fixed index.html so that label and input id match.

--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
         <div id=categoryFilter>
             <legend for="category">Category</legend>
                 <input type="radio" name="category" value="Trench Coat" id="garmentTrenchCoat" />
-                <label for="trenchCoat">Trench Coat</label>
+                <label for="garmentTrenchCoat">Trench Coat</label>
                 <input type="radio" name="category" value="Dress" id="garmentDress" />
-                <label for="dress">Dress</label>
+                <label for="garmentDress">Dress</label>
                 <input type="radio" name="category" value="Coat" id="garmentCoat" />
-                <label for="coat">Coat</label>
+                <label for="garmentCoat">Coat</label>
                 <input type="radio" name="category" value="Skirt" id="garmentSkirt" />
-                <label for="skirt">Skirt</label>
+                <label for="garmentSkirt">Skirt</label>
                 <input type="radio" name="category" value="Sweater" id="garmentSweater" />
-                <label for="sweater">Sweater</label>
-                <input type="radio" name="category" value="Sweater" id="garmentSweater" />
-                <label for="sweater">Sweater</label>    
+                <label for="garmentSweater">Sweater</label> 
         </div>
         <div id=brandFilter>
             <legend for="brand">Brand</legend>
             <input type="radio" name="brand" value="Burberry" id="brandBurberry" />
-            <label for="Burberry">Burberry</label>
+            <label for="brandBurberry">Burberry</label>
             <input type="radio" name="brand" value="Tiger of Sweden" id="brandTigerOfSweden" />
-            <label for="Tiger of Sweden">Tiger of Sweden</label>
+            <label for="brandTigerOfSweden">Tiger of Sweden</label>
             <input type="radio" name="brand" value="Ted Baker" id="brandTedBaker" />
-            <label for="Ted Baker">Ted Baker</label>
+            <label for="brandTedBaker">Ted Baker</label>
             <input type="radio" name="brand" value="Max Mara" id="brandMaxMara" />
-            <label for="Max Mara">Max Mara</label>
+            <label for="brandMaxMara">Max Mara</label>
             <input type="radio" name="brand" value="Filippa K" id="brandFilippaK" />
-            <label for="Filippa K">Filippa K</label>
+            <label for="brandFilippaK">Filippa K</label>
             <input type="radio" name="brand" value="Tommy Hilfiger" id="brandTommyHilfiger" />
-            <label for="Tommy Hilfiger">Tommy Hilfiger</label>
+            <label for="brandTommyHilfiger">Tommy Hilfiger</label>
+        </div>
+        <div id="imHumanContainer">
+            <input type="checkbox" name="human" value="human" id="isHumanCheckbox" />
+            <label for="imHuman">I am not a robot.</label>
         </div>
         <button type="button" name="Filter" id="filterButton">Filter</button>
         <button type="button" name="resetFilter" id="resetFilterButton">Reset Filter</button>
